# FastAPI-Boiler-Template

./: LICENCE  createapp.sh  pyproject.toml
src/: models.py
