[tool.poetry]
name = "fastapi-boiler-template"
version = "0.1.0"
description = "FastAPI Boiler Template"
authors = ["karthik-yml <karthik.tv@ymedialabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.112.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
